--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,7 +15,7 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "吃掉啊总",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
   "game-title": "新概念阴游(感谢啊总)
